<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/leftBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="@+id/msgTXT"
        app:layout_constraintTop_toTopOf="@+id/msgTXT"
        app:layout_constraintVertical_bias="0.482"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp" />

    <TextView
        android:id="@+id/msgTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="249dp"
        android:layout_height="25dp"
        android:text="@string/radio_title"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.69"
        tools:layout_editor_absoluteX="39dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="152dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:text="@string/chekck_item"
        app:layout_constraintTop_toBottomOf="@+id/leftBTN"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="254dp"
        android:layout_height="90dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="400dp">

        <RadioButton
            android:id="@+id/redRBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red" />

        <RadioButton
            android:id="@+id/blueRBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>